--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.7.2",
     "firebase": "^7.24.0",
+    "firebase-admin": "^9.3.0",
     "next": "9.5.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swr": "^0.2.2"
   }
 }
