--- a/package.json
+++ b/package.json
@@ -5,17 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@testing-library/dom": "^7.26.3",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
     "antd": "^4.7.2",
+    "babel-jest": "^26.6.1",
     "firebase": "^7.24.0",
     "firebase-admin": "^9.3.0",
+    "firebase-functions-test": "^0.2.2",
+    "firebase-mock": "^2.3.2",
+    "jest": "^26.6.1",
+    "jest-dom": "^4.0.0",
     "leaflet-geosearch": "^3.0.6",
     "next": "9.5.4",
     "opencage-api-client": "^0.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "swr": "^0.2.2"
+  },
+  "devDependencies": {
+    "identity-obj-proxy": "^3.0.0"
   }
 }
