--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "opencage-api-client": "^0.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-highlight-words": "^0.16.0",
     "swr": "^0.2.2"
   },
   "devDependencies": {
